# derive-C

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CONTRIBUTING.md  PRESENTATION.md  README.md  fail.txt  renovate.json  shell.nix
bench/: CMakeLists.txt  README.md
bench/allocs/: bench.cpp  instances.hpp
bench/allocs/benchmarks/: fragmentation.hpp  mixed_sizes.hpp  sequential_alloc.hpp  zeroed_alloc.hpp
bench/containers/map/: bench.cpp  instances.hpp
bench/containers/map/benchmarks/: iterate.hpp  lookup.hpp  mixed.hpp
bench/containers/queue/: CMakeLists.txt  bench.cpp  instances.hpp
bench/containers/queue/benchmarks/: access_ends.hpp  fifo_streaming.hpp  iterate.hpp  mixed.hpp  mixed_ops.hpp  pathological_rebalance.hpp  push_pop.hpp
bench/containers/set/: bench.cpp  instances.hpp
bench/containers/set/benchmarks/: iterator.hpp  mixed.hpp  mixed_sequential.hpp
bench/containers/vector/: bench.cpp  instances.hpp
bench/containers/vector/benchmarks/: iter_mut.hpp  mixed.hpp
bench/utils/: generator.hpp  label.hpp  object.hpp  range.hpp  seed.hpp
docs/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt  README.md  derives.c  employees.c  maps.c  prime_sieve.c
examples/allocs/: staticbump.c
examples/basic/: alloc.c
examples/basic/alloc/: chunkedbump.c  debug.c  hybridstatic.c  slab.c  staticbump.c  wrap.c
examples/basic/container/: arena.c  bitset.c  map.c  queue.c  set.c  vector.c
examples/basic/container/arena/: basic.c  chunked.c  geometric.c
examples/basic/container/bitset/: static.c
examples/basic/container/map/: decomposed.c
examples/basic/container/queue/: circular.c  deque.c
examples/basic/container/set/: swiss.c
examples/basic/container/utils/: option.c
examples/basic/container/vector/: dynamic.c  static.c
examples/basic/core/: trait.c
examples/basic/core/trait/: general.c
examples/basic/derive/: general.c
examples/basic/utils/: log.c  option.c  result.c  string_builder.c
examples/complex/: employees.c  prime_sieve.c  readme.c
examples/derives/: derives.c
examples/structures/: arena.c  hashmap.c  option.c  staticvec.c  vector.c
scripts/: .gitignore  CMakeLists.txt  README.md  pyproject.toml
scripts/notebooks/: README.md
scripts/notebooks/benchmark/: compilers.ipynb  containers.ipynb  parameters.ipynb
scripts/src/benchmarks/: __init__.py  cli.py  loader.py  types.py
scripts/src/intellisense/: main.py
scripts/src/linting/: linter.py  main.py  tags.py  utils.py
scripts/src/linting/lints/: def_undef_match.py  exported_macros.py  includes_export.py  template_defines.py
scripts/src/linting/output/: console.py
scripts/tests/linting/lints/: test_template_defines.py
scripts/tests/linting/output/: test_console.py
src/: CMakeLists.txt
src/derive-c/: CMakeLists.txt  core.h  panic.h  prelude.h  self.h
src/derive-c/algorithm/hash/: combine.h  default.h  fnv1a.h  hashers.h  id.h  murmur.h  murmurhash.h  worst.h
src/derive-c/alloc/: null.h  std.h  trait.h
src/derive-c/alloc/chunkedbump/: includes.h  template.h
src/derive-c/alloc/debug/: includes.h  template.h
src/derive-c/alloc/hybridstatic/: includes.h  template.h
src/derive-c/alloc/slab/: includes.h  template.h
src/derive-c/alloc/staticbump/: includes.h  template.h
src/derive-c/alloc/test/: includes.h  template.h
src/derive-c/alloc/wrap/: includes.h  template.h
src/derive-c/allocs/: null.h  std.h
src/derive-c/allocs/debug/: template.h
src/derive-c/allocs/staticbump/: template.h
src/derive-c/allocs/test/: template.h
src/derive-c/container/arena/: trait.h
src/derive-c/container/bitset/: trait.h
src/derive-c/container/map/: trait.h
src/derive-c/core/: attributes.h  compiler.h  cpu_features.h  derive.h  helpers.h  math.h  namespace.h  panic.h  placeholder.h  prelude.h  require.h  scope.h  unit.h  zerosized.h
src/derive-c/derive/: clone.h  eq.h  ord.h  std.h  struct.h
src/derive-c/derives/: clone.h  eq.h  ord.h  std.h  struct.h
src/derive-c/macros/: iterators.h
src/derive-c/self/: def.h  undef.h
src/derive-c/structures/: arena.template.h  hashmap.template.h  option.template.h  vector.template.h
src/derive-c/test/: mock.h  trampoline.hpp
src/derive-c/utils/: debug.h  file_handle.h  for.h  null_stream.h  timestamp.h
src/derive-cmake/: discover_test.cmake
src/derive-cpp/: CMakeLists.txt
src/derive-cpp/fmt/: c_style.hpp  remove_ptrs.hpp
src/derive-cpp/meta/: labels.hpp  member_ptr_class.hpp  unreachable.hpp
src/derive-cpp/test/: gtest_mock.hpp  gtest_panic.hpp  rapidcheck_fuzz.hpp  rapidcheck_panic.hpp  runtime_panic.hpp  strongint.h  strongint.hpp  trampoline.hpp
src/derive-py/: .gitignore  CMakeLists.txt  pyproject.toml
src/derive-py/src/: linter.py  main.py
test/: CMakeLists.txt  arena.cpp  core.cpp  hashmap.cpp  option.cpp  utils.hpp  vector.cpp
test/allocs/: commands.hpp  debug.cpp  staticbump.cpp  test.cpp
test/allocs/chunkedbump/: fuzz.cpp  test.cpp  warn.c
test/allocs/debug/: fuzz.cpp  test.cpp  tests.cpp  warn.c
test/allocs/hybridstatic/: fuzz.cpp  test.cpp  warn.c
test/allocs/null/: fuzz.cpp
test/allocs/slab/: fuzz.cpp  test.cpp  warn.c
test/allocs/staticbump/: fuzz.cpp  test.cpp  tests.cpp
test/allocs/std/: fuzz.cpp
test/allocs/test/: fuzz.cpp  test.cpp  tests.cpp  warn.c
test/containers/: common.hpp  objects.hpp
test/containers/arena/: commands.hpp  macros.hpp
test/containers/bitset/: commands.hpp
test/containers/map/: commands.hpp
test/containers/queue/: commands.hpp
test/containers/set/: commands.hpp
test/containers/vector/: commands.hpp
test/core/: tests.cpp
test/core/debug/: tests.cpp
test/structures/: arena.cpp  circular.cpp  deque.cpp  hashmap.cpp  option.cpp  staticvec.cpp  vector.cpp
test/test/: mock.cpp
test/test/mock/: test.cpp  tests.cpp
test/utils/debug/: test.cpp
test/utils/file_handle/: test.cpp
test/utils/for/: test.cpp  tests.cpp
test/utils/log/: test.cpp
test/utils/option/: test.cpp  tests.cpp  warn.c
test/utils/result/: test.cpp  warn.c
test/utils/string_builder/: test.cpp  tests.cpp  warn.c
(+181 files in other folders)
